syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

// Service
service PasswordService {
    // Methods
    rpc hash (UserHashRequest) returns (HashResponse);
    rpc validate (ValidateRequest) returns (ValidateResponse);
}

// Message: UserInput -> what will be passed into the hash method
message UserHashRequest {
    int32 userId = 1;
    string password = 2;
}

// The response(Return) message for the hash method
message HashResponse {
    int32 userId = 1;
    string hashedPassword = 2;
    string salt = 3;
} // End HashResponse Message

// Validate Request Message
message ValidateRequest {
    string password = 1;
    string hashedPassword = 2;
    string salt = 3;
}

// Validation Response
message ValidateResponse {
    bool validity = 1;
}

// The user message containing the user.
message User {
    int32 userId = 1;
    string hashedPassword = 2;
    string salt = 3;
}